--- a/index.html
+++ b/index.html
@@ -1,15 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Gjøl Kro Restaurant</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+    </style>
 </head>
+
 <body>
-    Yes
-    <p class="balazs">Balázs</p>
-    Lilla
+    <header>
+        <a href="index.html"><img id="top-logo" style="width: 200px;" src="assets/images/Gjol-Kro_logo_black.svg"
+                alt="Gjøl Kro logo black"></a>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Reservation</a></li>
+            </ul>
+        </nav>
+        <img id="landing-image" style="width: 40%;" src="assets/images/landing.png"
+            alt="Gjøl Kro Restaurant landing image boat">
+    </header>
+    <main>
+        <section class="welcome">
+            <h1>Welcome</h1>
+            <p>We at Gjøl Kro are all about the experience. We want you to enjoy the picturesque sunset over the fjord
+                accompanied by the wide selection of traditional Danish dishes. We serve the classics with a modern
+                twist, prepared from fresh, locally sourced ingredients. Come and feel the salty breeze of the sea while
+                you enjoy a mouth-watering meal in the historic scenery.</p>
+            <p>It's not just food, it's an experience.</p>
+            <button>Hours & Locations</button>
+        </section>
+        <div class="grid-container">
+            <div class="grid-section" id="content1"><img src="assets/images/restuarant.jpg"
+                    style="height: 100%; width: 100%; object-fit: cover;" alt=""></div>
+            <div class="grid-section" id="content2">
+                <p>Restaurant where you can feel the cozy atmosphere while savour charming view and individual approach
+                    from the owners and staff.</p>
+            </div>
+            <div class="grid-section" id="content3">
+                <p>The menu will vary depending on what raw goods are available during the season.</p>
+            </div>
+            <div class="grid-section" id="content4"><img src="assets/images/salmon bread.jpg"
+                    style="height: 100%; width: 100%; object-fit: cover;" alt="">
+            </div>
+            <div class="grid-section" id="content5"><img src="assets/images/pork belly.jpg"
+                    style="height: 100%; width: 100%; object-fit: cover;" alt=""></div>
+            <div class="grid-section" id="content6">
+                <p>Guests can enjoy our à la carte menu in the restaurant, in the bar area and on the terrace.</p>
+            </div>
+        </div>
+        <div class="history">
+            <div class="history-image"><img style="width: 30vw" src="assets/images/img1.png" alt=""></div>
+            <div class="history-text1">The historical inn dates all the way back to 1851,
+                when it had a thatch roof and served as the
+                town’s gathering point. Unfortunately, it burned
+                down around 1900 and was rebuild the year after,
+                giving it its current form with stepped gables.</div>
+            <div class="history-text2">The inn is also where Hans Kirk wrote his novel ”The Fishermen”
+                (Danish: Fiskerne), describing the conflict between the residents of
+                Gjøl and a group of newcomer fishermen.</div>
+        </div>
+        <section class="promotion">
+            <img class="fish-promo" style="max-width:50vw; height: 80vh;" src="assets/images/promotion fish-min.jpg"
+                alt="">
+            <img class="potato" style="max-width:40vw; height: 80vh;" src="assets/images/potatoes.png" alt="">
+        </section>
+        <section class="reservations-events">
+            <div class="card"><img id="mushroom" src="assets/images/mushroom.ico" alt=""></div>
+            <div class="card">
+                <div class="mushroom"></div>
+                <h2>Reservations</h2>
+                <p>Book your table to skip the waiting line!</p>
+                <button id="book-us">Book us</button>
+            </div>
+            <div class="card"><img id="wine" src="assets/images/wine.ico" alt=""></div>
+            <div class="card">
+                <div class="bottle"></div>
+                <h2>Events</h2>
+                <p>With spacious space, we can house 150 seated <br> guests, rent our place for parties, weddings,<br>
+                    milestone birthdays, confirmations and much more. </p>
+                <button>Contact us</button>
+            </div>
+
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Home</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Menu</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">Lunch</a></li>
+                        <li><a href="#">Dinner</a></li>
+                        <li><a href="#">Bar</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Gallery</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">Foods</a></li>
+                        <li><a href="#">The staff</a></li>
+                        <li><a href="#">The place</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Reservation</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">Book an event</a></li>
+                        <li><a href="#">Book a dinner</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram "></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
