reservation sections, few updates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Reservation</a></li>
+                <li><a href="reservation.html">Reservation</a></li>
+                <li><a href="#">Hours & Location</a></li>
             </ul>
         </nav>
         <img id="landing-image" style="width: 40%;" src="assets/images/landing.png"
