--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="footer-container">
             <div class="row">
                 <div class="footer-col">
                     <a href="#">
