--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="reservation.html">Reservation</a></li>
-                <li><a href="#">Hours & Location</a></li>
+                <li><a href="hours-location.html">Hours & Location</a></li>
             </ul>
         </nav>
         <img id="landing-image" style="width: 40%;" src="assets/images/landing.png"
