--- a/reservation.html
+++ b/reservation.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="reservation.html">Reservation</a></li>
-                <li><a href="#">Hours & Location</a></li>
+                <li><a href="hours-location.html">Location & Hours</a></li>
             </ul>
         </nav>
         <h2 id=reservation>RESERVATION</h2>
