hours-location edit
hours-location page visual changes (padding, font, map image responsivity)

--- a/hours-location.html
+++ b/hours-location.html
@@ -50,7 +50,7 @@
         <div class="map_holder">
             <img class="map" src="assets/images/direction-map.png" alt="Map of Gjol Kro">
             <a class="direction_button" href="https://www.google.com/maps/dir//Gj%C3%B8l+Kro+-+Kroen+ved+fjorden,+Fjordgade,+Aabybro/@57.0638002,9.6996883,12z/data=!4m9!4m8!1m0!1m5!1m1!1s0x46493a98644f49d3:0xee64761e113795b1!2m2!1d9.6996883!2d57.0638002!3e0">
-                Get Directions
+                GET DIRECTIONS
             </a>
         </div>
     </main>
