--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 alt="Gjøl Kro logo black"></a>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="marci.index.html">Gallery</a></li>
                 <li><a href="reservation.html">Reservation</a></li>
-                <li><a href="hours-location.html">Hours & Location</a></li>
+                <li><a href="hours-location.html">Location & Hours</a></li>
             </ul>
         </nav>
         <img id="landing-image" style="width: 40%;" src="assets/images/landing.png"
