Fixed font and button
Added roboto slab as font and fixed the button in the welcome section.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Gjøl Kro Restaurant</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
 </head>
 
@@ -37,7 +37,9 @@
                 twist, prepared from fresh, locally sourced ingredients. Come and feel the salty breeze of the sea while
                 you enjoy a mouth-watering meal in the historic scenery.</p>
             <p>It's not just food, it's an experience.</p>
-            <button>Hours & Locations</button>
+            <form method="get" action="hours-location.html">
+                <button type="submit">Hours & Location</button>
+            </form>
         </section>
         <div class="grid-container">
             <div class="grid-section" id="content1"><img src="assets/images/restuarant.jpg"
