book a table and event

--- a/reservation.html
+++ b/reservation.html
@@ -39,20 +39,24 @@
             </div>
             <div class="container2-form">
                 <form action="#">
-                    <a href="#" id="book">Book a Table</a>
-                    <a href="#" id="event">Event</a>
+                    <ul>
+                    <li class="options"><a href="#"  id="book"> Book a Table</a></li>
+                    <li class="options2"><a href="#" id="event"> Event</a></li>
+
+                </ul>
+        
 
                     <div class="form-field">
-                        <p id=section>Date</p>
+                        <p id=date>Date</p>
                         <input type="date" required>
                     </div>
                     
                     <div class="form-field">
-                        <p id=section>Time</p>
+                        <p id=time>Time</p>
                         <input type="time" required>
                     </div>
 
-                        <p id=section>Number of People</p>
+                        <p id=people>Number of People</p>
                         <select name="select" id="#" required>
                           <option>1</option>
                           <option>2</option>
@@ -201,18 +205,18 @@
                       </form>
 
                     <div class="form-field">
-                        <p id=section>Name</p>
+                        <p id=name>Name</p>
                         <input type="text" name="firstName" id="firstName" placeholder="Enter your full name"
                             required autocomplete="on" />
                     </div>
                     <div class="form-field">
-                        <p id=section>Email Adress</p>
+                        <p id=>Email Adress</p>
                         <input type="email" name="email" id="email" placeholder="Enter your email address" required
                             autocomplete="on" />
                     </div>
 
                     <div class="form-field">
-                        <p id=section>Notes</p>
+                        <p id=notes>Notes</p>
                         <textarea id="message" name="visitor_message"
                             placeholder="Tell us something else that might be important..."></textarea>
                     </div>
