Fixed the buttons in the reservation section
Now they work and they look like in the prototype

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 accompanied by the wide selection of traditional Danish dishes. We serve the classics with a modern
                 twist, prepared from fresh, locally sourced ingredients. Come and feel the salty breeze of the sea while
                 you enjoy a mouth-watering meal in the historic scenery.</p>
-            <p>It's not just food, it's an experience.</p>
+            <p>"It's not just food, it's an experience."</p>
             <form method="get" action="hours-location.html">
                 <button type="submit">Hours & Location</button>
             </form>
@@ -82,7 +82,9 @@
                 <div class="mushroom"></div>
                 <h2>Reservations</h2>
                 <p>Book your table to skip the waiting line!</p>
-                <button id="book-us">Book us</button>
+                <form method="get" action="reservation.html">
+                    <button type="submit" id="book-us">Book us</button>
+                </form>
             </div>
             <div class="card"><img id="wine" src="assets/images/wine.ico" alt=""></div>
             <div class="card">
@@ -90,7 +92,9 @@
                 <h2>Events</h2>
                 <p>With spacious space, we can house 150 seated <br> guests, rent our place for parties, weddings,<br>
                     milestone birthdays, confirmations and much more. </p>
-                <button>Contact us</button>
+                    <form method="get" action="reservation.html">
+                        <button type="submit" id="contact-us">Contact us</button>
+                    </form>
             </div>
 
         </section>
