--- a/reservation.html
+++ b/reservation.html
@@ -51,13 +51,13 @@
                         <input type="date" required>
                     </div>
                     
-                    <div class="form-field">
+                    <div id="timeslot" class="form-field">
                         <p id=time>Time</p>
-                        <input type="time" required>
+                        <input id= "clock" type="time" required>
                     </div>
 
                         <p id=people>Number of People</p>
-                        <select name="select" id="#" required>
+                        <select name="select" id="number" required>
                           <option>1</option>
                           <option>2</option>
                           <option>3</option>
@@ -206,12 +206,12 @@
 
                     <div class="form-field">
                         <p id=name>Name</p>
-                        <input type="text" name="firstName" id="firstName" placeholder="Enter your full name"
+                        <input type="text" name="firstName" id="fullname" placeholder="Enter your full name"
                             required autocomplete="on" />
                     </div>
                     <div class="form-field">
-                        <p id=>Email Adress</p>
-                        <input type="email" name="email" id="email" placeholder="Enter your email address" required
+                        <p id=email>Email Adress</p>
+                        <input type="email" name="email" id="email-adresse" placeholder="Enter your email address" required
                             autocomplete="on" />
                     </div>
 
