--- a/hours-location.html
+++ b/hours-location.html
@@ -18,15 +18,15 @@
     <header>
         <a href="index.html"><img id="top-logo" style="width: 200px;" src="assets/images/Gjol-Kro_logo_black.svg"
                 alt="Gjøl Kro logo black"></a>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="reservation.html">Reservation</a></li>
-                <li><a href="hours-location.html">Hours & Location</a></li>
-            </ul>
-        </nav>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="marci.index.html">Gallery</a></li>
+                        <li><a href="reservation.html">Reservation</a></li>
+                        <li><a href="hours-location.html">Location & Hours</a></li>
+                    </ul>
+                </nav>
     </header>
     <main>
         <div class="hours_location"> 
