--- a/marci.index.html
+++ b/marci.index.html
@@ -12,7 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap');
- </style>
+    </style>
 </head>
 
 <header>
@@ -55,11 +55,48 @@
 
 
         <div class="main">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <h1 class="heading1">Garnish</h1>
+                    <p class="paragraph1">Come and choose from a <br>wide range of freshly <br>made side dishes.
+                </div>
+            </div>
+
+            <img class="potato" src="assets/images/DO NOT USE(POTATO WITH BACKGROUND).jpg" alt="POTATO">
+            <img class="tartar" src="assets/images/tartar.jpg" alt="chicken">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <h1 class="heading2">Tartar</h1>
+                    <p class="paragraph2">Have a bite of our <br>special tartar with spices. </p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="main">
+
             <img class="salmon" src="assets/images/salmon-min.jpg" alt="salmon-min">
-            <img class="mussel" src="assets/images/mussel.jpg" alt="mussel">
-            <img class="tartar" src="assets/images/tartar.jpg" alt="tartar">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <h1 class="heading1">Salmon</h1>
+                    <p class="paragraph1">Taste our salmon and <br> experience the moment <br>fully next to the sea.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <h1 class="heading2">Fish and Chips</h1>
+                    <p class="paragraph2">Do you like to stick <br>to your habits? <br>Have an excellent bite <br>of our fish and chips.</p>
+                </div>
+            </div>
             <img class="fish" src="assets/images/fish and chip.jpg" alt="fish">
         </div>
+
 
         <div id="DINNER">
             <p class="p2">
@@ -68,9 +105,45 @@
         </div>
 
         <div class="main">
-            <img class="caviar" src="assets/images/carviar.jpg" alt="carviar">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <h1 class="heading1">Chicken</h1>
+                    <p class="paragraph1">Chicken for your tastebuds!</p>
+                </div>
+            </div>
+
             <img class="chicken" src="assets/images/chicken.jpg" alt="chicken">
             <img class="cod" src="assets/images/cod.jpg" alt="cod">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <h1 class="heading2">Cod</h1>
+                    <p class="paragraph2">Taste our new <br>mouth-watering recipes.</p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="main">
+
+            <img class="caviar" src="assets/images/carviar.jpg" alt="caviar">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <h1 class="heading1">Caviar</h1>
+                    <p class="paragraph1">Are you long for <br>something different? <br>Don’t be shy and ask<br> for our caviar!</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <h1 class="heading2">Pork</h1>
+                    <p class="paragraph2">Amazing recipes for <br>amazing customers!</p>
+                </div>
+            </div>
             <img class="pork" src="assets/images/pork belly 2.jpeg" alt="pork">
         </div>
 
@@ -80,26 +153,156 @@
             </p>
         </div>
 
-        <div class="main2">
-            <img class="image1" src="assets/images/lemonade-min.jpg" alt="lemonade-min">
-            <img class="image2" src="assets/images/gin.JPG" alt="gin">
-        </div>
-    </div>
+        <div class="main">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <h1 class="heading1">Gin</h1>
+                    <p class="paragraph1">A refreshing taste <br> you’ll remember.</p>
+                </div>
+            </div>
 
-    <div id="COFFEE & DESSERT">
+            <img class="gin" src="assets/images/gin.jpg" alt="gin">
+            <img class="orange" src="assets/images/pexels-timur-weber-8679366.jpg" alt="orange">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <h1 class="heading2">Orange Juice</h1>
+                    <p class="paragraph2">Have a glass of <br>freshly made orange juice<br> without any artificial additives.</p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="main">
+            <img class="lemonade-min" src="assets/images/lemonade-min.jpg" alt="lemonade-min">
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <h1 class="heading1">Lemonade</h1>
+                    <p class="paragraph1">Freshen up yourself with <br>our sweet and cooling lemonade.</p>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="banner">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <h1 class="heading2">Strawberry Smoothie</h1>
+                    <p class="paragraph2">Taste local freshness.</p>
+                </div>
+            </div>
+            <img class="strawberry" src="assets/images/pexels-ehioma-osih-10766779.jpg" alt="strawberry">
+        </div>
+
+
+        </div>
+
+
+
+      <div id="COFFEE & DESSERT">
         <p class="p2">
             COFFEE & DESSERT
         </p>
-    </div>
+        </div>
 
-    <div class="main">
-        <img class="panacotta" src="assets/images/panacotta.jpg" alt="panacotta">
+        <div class="main">
+        <div class="row">
+            <div class="banner">
+                <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                <h1 class="heading1">Chocolate Ice Cream</h1>
+                <p class="paragraph1">We are open to your cold sugar cravings.</p>
+            </div>
+        </div>
+
         <img class="choco" src="assets/images/choco icecream.jpg" alt="choco">
         <img class="coffee" src="assets/images/coffee.jpg" alt="coffee">
-        <img class="chocolate" src="assets/images/choclate cake.jpg" alt="choclate">
+        <div class="row">
+            <div class="banner">
+                <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                <h1 class="heading2">Coffee</h1>
+                <p class="paragraph2">Power up with coffee!</p>
+            </div>
+        </div>
+        </div>
+
+
+
+        <div class="main">
+
+        <img class="panacotta" src="assets/images/panacotta.jpg" alt="panacotta">
+        <div class="row">
+            <div class="banner">
+                <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                <h1 class="heading1">Pannacotta</h1>
+                <p class="paragraph1">Try it, you won’t regret it!</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="banner">
+                <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                <h1 class="heading2">Chocolate Cake</h1>
+                <p class="paragraph2">Give yourself a sweet <br>treat after a heavy meal.</p>
+            </div>
+        </div>
+        <img class="choclate" src="assets/images/choclate cake.jpg" alt="choclate">
     </div>
 
-    </div>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="row">
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Home</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Menu</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">Lunch</a></li>
+                        <li><a href="#">Dinner</a></li>
+                        <li><a href="#">Bar</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Gallery</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">Foods</a></li>
+                        <li><a href="#">The staff</a></li>
+                        <li><a href="#">The place</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Reservation</h4>
+                    </a>
+                    <ul>
+                        <li><a href="#">Book an event</a></li>
+                        <li><a href="#">Book a dinner</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram "></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
