--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#">Menu</a></li>
                 <li><a href="marci.index.html">Gallery</a></li>
-                <li><a href="#">Our</a></li>
+                <li><a href="#">Our story</a></li>
                 <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
             </ul>
         </nav>
@@ -36,10 +36,26 @@
                 </form>
             </div>
             <div class="hero-image"><img id="landing-image" style="width: 100%;" src="assets/images/landing.png"
-                alt="Gjøl Kro Restaurant landing image boat"></div>
+                    alt="Gjøl Kro Restaurant landing image boat"></div>
         </div>
     </header>
     <main>
+        <section class="promotion">
+            <img class="promo-image" style="max-width:50vw; height: 80vh;" src="assets/images/fish promo.jpg" alt="">
+            <div class="promo-form">
+                <h2>Dine with us for 20% OFF</h2>
+                <h4>Subscribe to our newsletter and recieve a 20% discount in your mailbox!</h4>
+                <form action="#">
+                    <label for="email">Enter your email:</label>
+                    <input placeholder="example@gmail.com" type="email" id="email" name="email">
+                    <input type="submit" value="Subscribe">
+                    <label for="terms">I give my consent to Gjøl Kro to be in touch with me via email using the <br>
+                        information I have provided in this form for the purpose of news and marketing.</label>
+                    <input type="checkbox" id="terms" name="terms" value="terms" required /><br>
+                </form>
+            </div>
+
+        </section>
         <div class="grid-container">
             <div class="grid-section" id="content1"><img src="assets/images/restuarant.jpg"
                     style="height: 100%; width: 100%; object-fit: cover;" alt=""></div>
@@ -59,43 +75,18 @@
                 <p>Guests can enjoy our à la carte menu in the restaurant, in the bar area and on the terrace.</p>
             </div>
         </div>
-        <div class="history">
-            <div class="history-image"><img style="width: 30vw" src="assets/images/img1.png" alt=""></div>
-            <div class="history-text1">The historical inn dates all the way back to 1851,
-                when it had a thatch roof and served as the
-                town’s gathering point. Unfortunately, it burned
-                down around 1900 and was rebuild the year after,
-                giving it its current form with stepped gables.</div>
-            <div class="history-text2">The inn is also where Hans Kirk wrote his novel ”The Fishermen”
-                (Danish: Fiskerne), describing the conflict between the residents of
-                Gjøl and a group of newcomer fishermen.</div>
-        </div>
-        <section class="promotion">
-            <img class="fish-promo" style="max-width:50vw; height: 80vh;" src="assets/images/promotion fish-min.jpg"
-                alt="">
-            <img class="potato" style="max-width:40vw; height: 80vh;" src="assets/images/potatoes.png" alt="">
-        </section>
         <section class="reservations-events">
-            <div class="card"><img id="mushroom" src="assets/images/mushroom.ico" alt=""></div>
+            <div><img id="events" src="assets/images/balloon.png" style="width:300px;" alt=""></div>
             <div class="card">
-                <div class="mushroom"></div>
-                <h2>Reservations</h2>
-                <p>Book your table to skip the waiting line!</p>
+                <h3>Events</h3>
+                <p>With spacious space, we can house 150 seated guests, rent our place for parties, weddings, milestone
+                    birthdays, confirmations and much more.
+                </p>
                 <form method="get" action="reservation.html">
                     <button type="submit" id="book-us">Book us</button>
                 </form>
             </div>
-            <div class="card"><img id="wine" src="assets/images/wine.ico" alt=""></div>
-            <div class="card">
-                <div class="bottle"></div>
-                <h2>Events</h2>
-                <p>With spacious space, we can house 150 seated <br> guests, rent our place for parties, weddings,<br>
-                    milestone birthdays, confirmations and much more. </p>
-                <form method="get" action="reservation.html">
-                    <button type="submit" id="contact-us">Contact us</button>
-                </form>
             </div>
-
         </section>
     </main>
     <footer class="footer">
