Updated the promo section on the index page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <h2>Dine with us for 20% OFF</h2>
                 <h4>Subscribe to our newsletter and recieve a 20% discount in your mailbox!</h4>
                 <form action="#">
-                    <label for="email">Enter your email:</label>
-                    <input placeholder="example@gmail.com" type="email" id="email" name="email">
+                    <label for="email"></label>
+                    <input placeholder="Enter your e-mail here" type="email" id="email" name="email">
                     <input type="submit" value="Subscribe">
                     <label for="terms">I give my consent to Gjøl Kro to be in touch with me via email using the <br>
                         information I have provided in this form for the purpose of news and marketing.</label>
