--- a/index.html
+++ b/index.html
@@ -91,45 +91,18 @@
     </main>
     <footer class="footer">
         <div class="footer-container">
-            <div class="row">
+            <img src="assets/images/Gjol-Kro_logo_white.svg" style="height: 80px;" alt="">
+            <div class="footer-row">
                 <div class="footer-col">
-                    <a href="#">
-                        <h4>Home</h4>
-                    </a>
+                    <h4>Explore more</h4>
                     <ul>
-                        <li><a href="#">History</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Our story</a></li>
                     </ul>
-                </div>
-                <div class="footer-col">
-                    <a href="#">
-                        <h4>Menu</h4>
-                    </a>
-                    <ul>
-                        <li><a href="#">Lunch</a></li>
-                        <li><a href="#">Dinner</a></li>
-                        <li><a href="#">Bar</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <a href="#">
-                        <h4>Gallery</h4>
-                    </a>
-                    <ul>
-                        <li><a href="#">Foods</a></li>
-                        <li><a href="#">The staff</a></li>
-                        <li><a href="#">The place</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <a href="#">
-                        <h4>Reservation</h4>
-                    </a>
-                    <ul>
-                        <li><a href="#">Book an event</a></li>
-                        <li><a href="#">Book a dinner</a></li>
-                    </ul>
+                    <form method="get" action="reservation.html">
+                        <button type="submit" class="footer-button">Reserve a table</button>
+                    </form>
                 </div>
                 <div class="footer-col">
                     <h4>Follow us</h4>
@@ -138,6 +111,35 @@
                         <a href="#"><i class="fab fa-instagram "></i></a>
                     </div>
                 </div>
+                <div class="footer-col">
+                        <h4>Contact us</h4>
+                    <ul>
+                        <li>22 36 76 87</li>
+                        <li>Fhordgade 18, <br> 9440 Aabybro</li>
+                        <li id="click-here">Click here to view on google maps:</li>
+                    </ul>
+                    <form method="get"
+                        action="https://www.google.hu/maps/place/Gj%C3%B8l+Kro+-+Kroen+ved+fjorden/@57.0638002,9.6974996,17z/data=!3m1!4b1!4m5!3m4!1s0x46493a98644f49d3:0xee64761e113795b1!8m2!3d57.0638002!4d9.6996883">
+                        <button type="submit" class="footer-button">View on map</button>
+                    </form>
+                </div>
+                <div class="footer-col">
+                    <a href="#">
+                        <h4>Visit us</h4>
+                    </a>
+                    <ul>
+                        <li>Monday: Closed</li>
+                        <li>Tuesday: Closed</li>
+                        <li>Wednesday: 12 Pm - 10 pm</li>
+                        <li>Thursday: 12 pm - 10 pm</li>
+                        <li>Friday: 12 pm - 10 pm</li>
+                        <li>Saturday: 12 pm - 10 pm</li>
+                        <li>Sunday: 12 pm - 10 pm</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>© Copyright.  All rights reserved.</p>
             </div>
         </div>
     </footer>
