put privacy policy in

--- a/reservation.html
+++ b/reservation.html
@@ -217,8 +217,9 @@
                         <p id=notes>Notes</p>
                         <textarea id="message" name="visitor_message"
                             placeholder="Tell us something else that might be important..."></textarea>
-                    </div>
-
+                            <label id="policy" for="terms">I agree to the <a href="#">Terms</a> and the<a href="#">Privacy Policy</a> </label>
+                            <input type="checkbox" id="terms2" name="terms" value="terms" required />
+                        </div>
                     <button class="button">Submit</button>
                 </form>
             </div>
