--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="marci.index.html">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="reservation.html">Reservation</a></li>
             <li><a href="hours-location.html">Location & Hours</a></li>
         </ul>
