--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
             <ul>
                 <li><a href="#">Menu</a></li>
-                <li><a href="marci.index.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#">Our story</a></li>
                 <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
             </ul>
@@ -41,10 +41,10 @@
     </header>
     <main>
         <section class="promotion">
-            <img class="promo-image" style="max-width:50vw; height: 80vh;" src="assets/images/fish promo.jpg" alt="">
+            <img class="promo-image" style="max-width:40vw; height: 80vh;" src="assets/images/fish promo.jpg" alt="">
             <div class="promo-form">
                 <h2>Dine with us for 20% OFF</h2>
-                <h4>Subscribe to our newsletter and recieve a 20% discount in your mailbox!</h4>
+                <h4>Subscribe to our newsletter and recieve a 20% discount <br> in your mailbox!</h4>
                 <form action="#">
                     <label for="email"></label>
                     <input placeholder="Enter your e-mail here" type="email" id="email" name="email">
