responsiveness optimized on index page

--- a/hours-location.html
+++ b/hours-location.html
@@ -16,17 +16,15 @@
 
 <body>
     <header>
-        <a href="index.html"><img id="top-logo" style="width: 200px;" src="assets/images/Gjol-Kro_logo_black.svg"
-                alt="Gjøl Kro logo black"></a>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="marci.index.html">Gallery</a></li>
-                        <li><a href="reservation.html">Reservation</a></li>
-                        <li><a href="hours-location.html">Location & Hours</a></li>
-                    </ul>
-                </nav>
+        <nav>
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
+            <ul>
+                <li><a href="#">Menu</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="#">Our story</a></li>
+                <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="hours_location"> 
