--- a/reservation.html
+++ b/reservation.html
@@ -231,7 +231,7 @@
                         <h4>Explore more</h4>
                         <ul>
                             <li><a href="#">Menu</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="#">Our story</a></li>
                         </ul>
                         <form method="get" action="reservation.html">
@@ -251,9 +251,7 @@
                         </form>
                     </div>
                     <div class="footer-col">
-                        <a href="#">
                             <h4>Visit us</h4>
-                        </a>
                         <ul>
                             <li>Monday: Closed</li>
                             <li>Tuesday: Closed</li>
