--- a/gallery.html
+++ b/gallery.html
@@ -16,17 +16,13 @@
 </head>
 
 <header>
-    <div class="logo">
-        <img id="top-logo" style="width: 200px;" src="assets/images/Gj›l-Kro_logo_black.svg" alt="Gjøl Kro logo black">
-    </div>
-
-    <nav>
+        <nav>
+        <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="reservation.html">Reservation</a></li>
-            <li><a href="hours-location.html">Location & Hours</a></li>
+            <li><a href="#">Our story</a></li>
+            <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
         </ul>
     </nav>
 
