--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <li><a href="#">Our story</a></li>
                     </ul>
                     <form method="get" action="reservation.html">
-                        <button type="submit" class="footer-button">Reserve a table</button>
+                        <button type="submit" class="footer-button-reserve">Reserve a table</button>
                     </form>
                 </div>
                 <div class="footer-col">
