Added separate CSS to menu

--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/menu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Gjøl Kro Restaurant</title>
     <style>
@@ -25,6 +25,7 @@
         </nav>
     </header>
     <main>
+        <h1> MENU </h1>
         <ul class="menu-nav">
             <li>LUNCH</li>
             <li>DINNER</li>
