--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Menu</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="reservation.html">Reservation</a></li>
             <li><a href="hours-location.html">Location & Hours</a></li>
