--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
             <ul>
-                <li><a href="#">Menu</a></li>
+                <li><a href="menu.html">Menu</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#">Our story</a></li>
                 <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
