--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="assets/menu.css">
@@ -12,28 +12,20 @@
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
 </head>
+
 <body>
-    <header>
+    <header class="header-container">
         <nav>
             <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
             <ul>
-                <li><a href="#">Menu</a></li>
+                <li><a href="menu.html">Menu</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#">Our story</a></li>
                 <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h1> MENU </h1>
-        <ul class="menu-nav">
-            <li>LUNCH</li>
-            <li>DINNER</li>
-            <li>BEVERAGES</li>
-            <li>COFFEE & DESSERT</li>
-        </ul>
-    </main>
 
-</body>  
+</body>
 
 </html>
