--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
-            <ul>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="#">Our story</a></li>
-                <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
-            </ul>
+            <div class="header-container">
+                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
+                <ul class="menu">
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="#">Our story</a></li>
+                    <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
+                </ul>
+            </div>
         </nav>
         <div class="hero-container">
             <div class="hero-text">
