--- a/marci.index.html
+++ b/marci.index.html
@@ -16,28 +16,26 @@
 </head>
 
 <header>
-    <div class="logo">
-        <img id="top-logo" style="width: 200px;" src="assets/images/Gj›l-Kro_logo_black.svg" alt="Gjøl Kro logo black">
-    </div>
+
 
     <nav>
+        <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
             <li><a href="marci.index.html">Gallery</a></li>
-            <li><a href="reservation.html">Reservation</a></li>
-            <li><a href="hours-location.html">Location & Hours</a></li>
+            <li><a href="#">Our</a></li>
+            <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
         </ul>
     </nav>
 
     <p class="p1">GALLERY</p>
 
-    <nav>
-        <ul class="nav2">
-            <li><a href="#LUNCH">LUNCH</a></li>
-            <li><a href="#DINNER">DINNER</a></li>
-            <li><a href="#BEVERAGES">BEVERAGES</a></li>
-            <li><a href="#COFFEE & DESSERT">COFFEE & DESSERT</a></li>
+    <nav class="nav2">
+        <ul>
+            <li><a href="#LUNCH">Lunch</a></li>
+            <li><a href="#DINNER">Dinner</a></li>
+            <li><a href="#BEVERAGES">Beverages</a></li>
+            <li><a href="#COFFEE & DESSERT">Coffee & Dessert</a></li>
         </ul>
     </nav>
 </header>
@@ -58,7 +56,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                    <h1 class="heading1">Garnish</h1>
+                    <h4 class="h4">Garnish</h4>
                     <p class="paragraph1">Come and choose from a <br>wide range of freshly <br>made side dishes.
                 </div>
             </div>
@@ -68,7 +66,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                    <h1 class="heading2">Tartar</h1>
+                    <h5>Tartar</h5>
                     <p class="paragraph2">Have a bite of our <br>special tartar with spices. </p>
                 </div>
             </div>
@@ -81,7 +79,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                    <h1 class="heading1">Salmon</h1>
+                    <h4 class="h4">Salmon</h4>
                     <p class="paragraph1">Taste our salmon and <br> experience the moment <br>fully next to the sea.</p>
                 </div>
             </div>
@@ -90,8 +88,8 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                    <h1 class="heading2">Fish and Chips</h1>
-                    <p class="paragraph2">Do you like to stick <br>to your habits? <br>Have an excellent bite <br>of our fish and chips.</p>
+                    <h5 class="h5">Fish & <br>Chips</h5>
+                    <p class="paragraph3">Do you like to stick <br>to your habits? <br>Have an excellent bite <br>of our fish and chips.</p>
                 </div>
             </div>
         </div>
@@ -107,7 +105,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                    <h1 class="heading1">Chicken</h1>
+                    <h4 class="h4">Chicken</h4>
                     <p class="paragraph1">Chicken for your tastebuds!</p>
                 </div>
             </div>
@@ -117,7 +115,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                    <h1 class="heading2">Cod</h1>
+                    <h5>Cod</h5>
                     <p class="paragraph2">Taste our new <br>mouth-watering recipes.</p>
                 </div>
             </div>
@@ -130,7 +128,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                    <h1 class="heading1">Caviar</h1>
+                    <h4 class="h4">Caviar</h4>
                     <p class="paragraph1">Are you long for <br>something different? <br>Don’t be shy and ask<br> for our caviar!</p>
                 </div>
             </div>
@@ -139,7 +137,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                    <h1 class="heading2">Pork</h1>
+                    <h5>Pork</h5>
                     <p class="paragraph2">Amazing recipes for <br>amazing customers!</p>
                 </div>
             </div>
@@ -155,7 +153,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                    <h1 class="heading1">Gin</h1>
+                    <h4 class="h4">Gin</h4>
                     <p class="paragraph1">A refreshing taste <br> you’ll remember.</p>
                 </div>
             </div>
@@ -165,8 +163,8 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                    <h1 class="heading2">Orange Juice</h1>
-                    <p class="paragraph2">Have a glass of <br>freshly made orange juice<br> without any artificial additives.</p>
+                    <h5 class="h5">Orange <br>Juice</h5>
+                    <p class="paragraph3">Have a glass of <br>freshly made orange juice<br> without any artificial additives.</p>
                 </div>
             </div>
         </div>
@@ -177,7 +175,7 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                    <h1 class="heading1">Lemonade</h1>
+                    <h4 class="h4">Lemonade</h4>
                     <p class="paragraph1">Freshen up yourself with <br>our sweet and cooling lemonade.</p>
                 </div>
             </div>
@@ -186,8 +184,8 @@
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                    <h1 class="heading3">Strawberry Smoothie</h1>
-                    <p class="paragraph3">Taste local freshness.</p>
+                    <h5>Strawberry Smoothie</h5>
+                    <p class="paragraph5">Taste local freshness.</p>
                 </div>
             </div>
         </div>
@@ -207,7 +205,7 @@
         <div class="row">
             <div class="banner">
                 <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                <h1 class="heading4">Chocolate Ice Cream</h1>
+                <h6>Chocolate <br>Ice Cream</h6>
                 <p class="paragraph4">We are open to your cold sugar cravings.</p>
             </div>
         </div>
@@ -217,7 +215,7 @@
         <div class="row">
             <div class="banner">
                 <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                <h1 class="heading2">Coffee</h1>
+                <h5>Coffee</h5>
                 <p class="paragraph2">Power up with coffee!</p>
             </div>
         </div>
@@ -230,7 +228,7 @@
         <div class="row">
             <div class="banner">
                 <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
-                <h1 class="heading1">Pannacotta</h1>
+                <h4 class="h4">Pannacotta</h4>
                 <p class="paragraph1">Try it, you won’t regret it!</p>
             </div>
         </div>
@@ -239,8 +237,8 @@
         <div class="row">
             <div class="banner">
                 <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
-                <h1 class="heading2">Chocolate Cake</h1>
-                <p class="paragraph2">Give yourself a sweet <br>treat after a heavy meal.</p>
+                <h5>Chocolate <br>Cake</h5>
+                <p class="paragraph5">Give yourself a sweet <br>treat after a heavy meal.</p>
             </div>
         </div>
     </div>
